--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,10 +11,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y build-essential python-is-python3
-
-      # - name: Build the code
-      #   run: |
-      #     make
+          git submodule update --init --recursive
 
       - name: Compile the code
         run: |
