--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,9 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y build-essential python-is-python3
+          
+      - name: Download submodules
+        run: |
           git submodule update --init --recursive
 
       - name: Compile the code
