--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "aes"]
-	path = python-aes
-	url = https://github.com/boppreh/aes.git
+	path = aes
+	url = https://github.com/boppreh/aes
