re-introduce make

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,8 @@ jobs:
 
       - name: Compile the code
         run: |
-          gcc -Wall -Wextra -g test.c rijndael.c -o test
+          # gcc -Wall -Wextra -g test.c rijndael.c -o test
+          make
 
       - name: Run C tests
         run: |
